--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ piston = "0.17.0"
 piston2d-graphics = "0.13.0"
 pistoncore-glutin_window = "0.20.0"
 piston2d-opengl_graphics = "0.23.0"
+vecmath = "0.2.0"
