--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ name = "top-down"
 
 [dependencies]
 piston = "0.17.0"
+piston-float = "0.2.0"
 piston2d-graphics = "0.13.0"
 pistoncore-glutin_window = "0.20.0"
 piston2d-opengl_graphics = "0.23.0"
